--- a/taekwon-frontend/index.html
+++ b/taekwon-frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/index.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;700&family=Post+No+Bills+Colombo:wght@400;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;700&family=Post+No+Bills+Colombo:wght@400;700&family=Song+Myung&family=Saira+Stencil+One&display=swap" rel="stylesheet" />
     <title> Taekwon-do </title>
   </head>
   <body>
